# tabletd

./: Cargo.toml  README.md  debug_drm.sh
src/: lib.rs  main.rs
src/event_model/: event.rs
src/input_devices/: mod.rs  usb.rs
src/overlay/: mod.rs
src/overlay/backend_drm/: mod.rs
src/overlay/backend_drm/drm_util/: device.rs
src/overlay/backend_wayland/: mod.rs
src/raw/: ble.rs
src/screen_overlay/backend_drm/drm_util/: capability.rs  mod.rs
src/screen_overlay/backend_wayland/: mod.rs.2.bak  mod.rs.bak  surface_info.rs  surface_state.rs
src/statement/: event.rs
